hide overflow on mini card, now that they are rendering correctly

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -268,6 +268,7 @@ textarea {
         height: 100%;
         padding: 0;
         margin: 0;
+        overflow: hidden;
 
         &:hover {
         }
